[project]
name = "pointcloud2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Marko Bausch", email = "60338487+mrkbac@users.noreply.github.com" }
]
dependencies = [
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.280",
    "autopep8>=2.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true



[tool.autopep8]
max_line_length = 100

[tool.ruff]
line-length = 100

target-version = 'py38'
select = ['ALL']

ignore = [
    'ANN401',  # any-type
    'D203',    # one-blank-line-before-class
    'D212',    # multi-line-summary-first-line
    'PLR2004', # MagicValueComparisons
    'S101',    # AssertUsed
    'TCH003',  # typing-only-standard-library-import
]

[tool.ruff.flake8-quotes]
inline-quotes = 'single'
